ICE9/css/homestyles.css
nav{
	height: 100px;
	margin: 0px 50px;
}
.background-cover{
	padding: 50px 0px;
	background: url("../assets/star-banner.jpg") no-repeat center center;
	background-size: cover;
}
.background-cover-about{
	padding: 50px 0px;
	background: url("../assets/profile.jpg") no-repeat center center;
	background-size: cover;
}
.background-cover-superbas{
	padding: 50px 0px;
	background: url("../assets/superbas-banner.jpg") no-repeat center center;
	background-size: cover;
}
.background-cover-vr{
	padding: 50px 0px;
	background: url("../assets/virtual-reality-banner.jpg") no-repeat center center;
	background-size: cover;
}
.Project-Container{
	display: inline-block;
	width: 100%;
	margin-top: 20px;
	border:.25px solid #DCDCDC;
}
.Project-Container>p{
	text-align: center;
}
#center{
	position:absolute;
	font-size:18px;
}
h1{
	color: white !important;
	font-family: Europa, Helvetica;
}
#work>h2{
	text-align: center;
	font-family: Europa, Helvetica;
	padding:20px 0px;
}
.Project-Container:hover{
	box-shadow: 5px 5px 10px #DCDCDC;
}
.footer{
	position: relative;
  	height: 100px;
  	clear:both;
  	padding-top:50px;
	width: 100%;
	text-align: center;
	color: black;
	font-family: Europa, Helvetica;
}
.footer>p>a{
	text-decoration: none;
	padding-bottom: 10px;
}
.footer>p>a:hover{
	border-bottom: 5px solid black;
}
.text{
	margin: 0vw 30vw;
}
.Project-Container>p{
	font-family: Europa, Helvetica;
	padding: 30px 0px 20px 0px;
}
.project-summary{
	border-bottom: 1px solid black;
}
.project-description>p{
	padding: 30px 0px;
}
.project-description>h3{
	font-weight: bold;
}
.project-description>h4{
	font-weight: bold;
}
img{
	height:auto;
	width:100%;
}
a:hover{
	text-decoration: none !important;
}
.dropdown-content{
	display: none;
    position: absolute;
    background-color: #ffffff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 30px 15px 15px 15px;
    z-index: 1;
    font-family: Europa, Helvetica;
    font-size:16px;
}
.dropdown{
	position: relative;
    display: inline-block;
    font-family: Europa, Helvetica;
    font-size:18px;
}
.dropdown:hover .dropdown-content {
    display: block;
    font-family: Europa, Helvetica;
}
.dropdown-content>a>p{
	padding-bottom:15px;
	color: gray;
}
.dropdown-content>a>p:hover{
	color: black;
	padding-bottom: 10px;
	border-bottom: 5px black solid;
}
ul>li>a{
	color:gray !important;
}
ul>li>a:hover{
	color: black;
	text-decoration: none;
	padding-bottom: 10px;
	border-bottom: 5px black solid;
}
@media only screen and (min-width: 768px) {
    /* For desktop: */
nav{
	position: relative;
}
.logo{
	height:50px !important;
	width: auto;
	margin-top:20px;
}
nav>ul{
	list-style-type: none;
	float:right;
}
nav>ul>li{
	display: inline-block;
	margin-top: 15px;
	padding: 20px 10px;
	text-decoration: none !important;
	font-family: Europa, Helvetica;
	font-size:18px;
	color: #A9A9A9 !important;
	text-align:right;
}
.project-summary{
	margin-left: 250px;
	margin-right: 250px;
	padding: 30px 0px;
	font-family: "Futura Light", Europa, Helvetica;
}
.project-description{
	margin-left: 250px;
	margin-right: 250px;
	font-family: "Futura Light", Europa, Helvetica;	
}
.description>p{
	font-family: Europa, Helvetica;
	margin:50px 250px;
	display:block;
}
    }
@media only screen and (max-width: 768px) {
    /* For mobile: */
.logo{
	height:50px !important;
	width: auto;
	margin-top: 20px;
	margin-left: 25px;
}
nav>ul{
	list-style-type: none;
	float:right;
}
nav>ul>li{
	display: inline-block;
	margin-top: 15px;
	padding: 20px 25px;
	text-decoration: none !important;
	font-family: Europa, Helvetica;
	font-size:18px;
	color: #A9A9A9 !important;
	text-align:right;
}
.project-summary{
	margin-left: 100px;
	margin-right: 100px;
	padding: 30px 0px;
	font-family: "Futura Light", Europa, Helvetica;
}
.project-description{
	margin-left: 100px;
	margin-right: 100px;
	font-family: "Futura Light", Europa, Helvetica;	
}
.description>p{
	font-family: Europa, Helvetica;
	margin:50px 100px;
	display:block;
}
	}

